<resources>
    <string name="app_name">About Me</string>
    <string name="pro_name">Aueaoangkun Sroiaudom</string>
    <string name="pro_viw">623410059-1</string>
    <string name="consultant">consultant:Paryut</string>
    <string name="Mail">Mail:Aueaoangkun@kkumail.com</string>
    <string name="Profile">Profile</string>
    <string name="back">back</string>
    <string name="facebook">facebook:Fin Aueaoangkun </string>
    <string name="IG">IG:Finnnnnn</string>
    <string name="Phon">0642806995</string>
    <string name="e_1">EducationalRecord:Bachelor degree</string>
    <string name="address">address:16/1 m.16 Phukieo Chaiyaphum 36110</string>
</resources>